vm-builder (0.9-0ubuntu2) UNRELEASED; urgency=low

  [ Nicolas Barcet ]
  * Added hint for more help (LP: #269323)
  * Added firstscripts plugin to fix regression on --firstboot and --firstlogin (LP: #268957)
  * Added postinst plugin to fix regression on --exec and add --copy (LP: #268955) 
  * Added man page

  [ Soren Hansen ]
  * Include ubuntu-vm-builder package.
  * Read additional config file given by '-c'. (LP: #276813)
  * Fix regression from ubuntu-vm-builder: Make output from subprocess
    non-buffered.
  * Let --overwrite apply for libvirt as well. (LP: #276322)

 -- Soren Hansen <soren@ubuntu.com>  Fri, 03 Oct 2008 18:52:06 +0200

vm-builder (0.9-0ubuntu1) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Fixed regression on --ip and friends (LP: #268920)
  * Added missing dependancy on dpkg-dev (LP: #270324)
  * Fixed regression on --part (LP: #268718)
  
 -- Soren Hansen <soren@ubuntu.com>  Wed, 24 Sep 2008 09:58:35 +0200

vm-builder (0.8.1-0ubuntu3) intrepid; urgency=low

  [Soren Hansen <soren@ubuntu.com>]
  * Re-add VMWare support. (LP: #268140) 
  * Fixed sources.list generation for Ubuntu. (LP: #268155)
  * Added configuration file handling. (LP: #268170)
  * Fix up Xen support (device and configuration file creation). (LP: #268142)

 -- Soren Hansen <soren@ubuntu.com>  Tue, 09 Sep 2008 17:01:02 +0200

vm-builder (0.8.1-0ubuntu2) intrepid; urgency=low

  * Apply patch to only conditionally import libvirt. Fixes FTBFS.

 -- Soren Hansen <soren@ubuntu.com>  Thu, 04 Sep 2008 09:50:27 +0200

vm-builder (0.8.1-0ubuntu1) intrepid; urgency=low

  * Added lots of inline documentation.
  * Build documentation using epydoc.
  * Moved libvirt support to a separate plugin. (LP: #264605)
  * Deploy directly to libvirt (regression from ubuntu-vm-builder). (LP: #264604)
  * Updated debian/{copyright,control} to reflect move on Launchpad.
  * No longer a native package.
