@@ -46,6 +46,17 @@ class TestSequenceFunctions(unittest.TestCase):
         self.assertEqual(VMBuilder.disk.devname_to_index('zz'), 701)
         self.assertEqual(VMBuilder.disk.devname_to_index('zzz'), 18277)
 
+import VMBuilder
+from VMBuilder.plugins.ubuntu.distro import Ubuntu
+from   VMBuilder.exception import VMBuilderException
+
+class TestUbuntuPlugin(unittest.TestCase):
+    def test_preflight_check_failed(self):
+        vm = VMBuilder.VM()
+        vm.suite = 'foo'
+        ubuntu = Ubuntu(vm)
+        self.assertRaises(VMBuilderException, ubuntu.preflight_check)
+
 if __name__ == '__main__':
     unittest.main()
 
